--- a/css/style.css
+++ b/css/style.css
@@ -1298,6 +1298,8 @@ h3 {
   }
 }
 
+
+
 /* line 39, C:/Users/SPN Graphics/Desktop/CL September/210 Medical/HTML/scss/_slider.scss */
 .slider_area .single_slider .slider_text p {
   font-size: 18px;
@@ -1318,6 +1320,29 @@ h3 {
   /* line 39, C:/Users/SPN Graphics/Desktop/CL September/210 Medical/HTML/scss/_slider.scss */
   .slider_area .single_slider .slider_text p {
     font-size: 16px;
+  }
+}
+
+@media (max-width: 576px) {
+  .single_slider::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    margin: auto;
+    background-color: #00000080;
+  
+  }
+  .slider_area .single_slider .slider_text h3{
+    color: #fff;
+    letter-spacing: 0px;
+  }
+  .slider_area .single_slider .slider_text p{
+    color: #fff;
   }
 }
 
