--- a/css/style.css
+++ b/css/style.css
@@ -387,19 +387,19 @@ h3 {
   font-size: 14px;
   font-weight: 400;
   border: 0;
-  border: 1px solid #009DFF;
+  border: 1px solid #ec4d23;
   letter-spacing: 3px;
   text-align: center;
-  color: #009DFF !important;
+  color: #ec4d23 !important;
   text-transform: uppercase;
   cursor: pointer;
 }
 
 /* line 17, C:/Users/SPN Graphics/Desktop/CL September/210 Medical/HTML/scss/_btn.scss */
 .boxed-btn:hover {
-  background: #009DFF;
+  background: #ec4d23;
   color: #fff !important;
-  border: 1px solid #009DFF;
+  border: 1px solid #ec4d23;
 }
 
 /* line 22, C:/Users/SPN Graphics/Desktop/CL September/210 Medical/HTML/scss/_btn.scss */
@@ -2498,7 +2498,7 @@ h3 {
 
 /* line 7, C:/Users/SPN Graphics/Desktop/CL September/210 Medical/HTML/scss/_bradcam.scss */
 .breadcam_bg_2 {
-  background-image: url(../img/banner/bradcam3.png);
+  background-image: url(../img/banner/banner3.jpg);
 }
 
 /* line 10, C:/Users/SPN Graphics/Desktop/CL September/210 Medical/HTML/scss/_bradcam.scss */
