--- a/css/style.css
+++ b/css/style.css
@@ -4539,6 +4539,16 @@ h6 {
   width: 100%;
 }
 
+.textarea{
+  height: 8rem;
+  width: 100%;
+  border: 1px solid #ddd;
+  padding: 17px;
+  font-size: 12px;
+  color: #919191;
+  margin-bottom: 20px;
+}
+
 /* line 1045, C:/Users/SPN Graphics/Desktop/CL September/210 Medical/HTML/scss/_elements.scss */
 .form-select .nice-select {
   border: none;
